--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Footer css */
 .container2 {
   display: flex;
   justify-content: space-between;
@@ -11,4 +12,103 @@
 }
 .Address-footer {
   width: 30%;
+}
+
+/* CategorCss */
+.CategorCss {
+  display: flex;
+  gap: 10px;
+  padding: 15px;
+  flex-wrap: wrap;
+}
+
+.cat-btn {
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: none;
+  background: #e74c3c;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.cat-btn:hover {
+  background: #c0392b;
+}
+
+/* Product-CSS */
+/* GRID WRAPPER */
+.food-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+/* CARD STYLE */
+.food-card {
+  border: none !important;
+  border-radius: 16px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.09);
+  transition: 0.3s ease;
+}
+
+/* PC Hover */
+@media (hover: hover) {
+  .food-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18);
+  }
+
+  .food-card:hover img {
+    transform: scale(1.08);
+  }
+}
+
+/* IMAGE BOX */
+.img-box {
+  width: 100%;
+  height: 180px;
+  overflow: hidden;
+}
+
+.img-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.4s ease;
+}
+
+/* TEXT */
+.price {
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.desc {
+  color: #555;
+  font-size: 14px;
+  height: 45px;
+  overflow: hidden;
+}
+
+/* BUTTON */
+.add-btn {
+  width: 100%;
+  padding: 10px;
+  border-radius: 12px;
+  font-weight: 600;
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+  .food-grid {
+    grid-template-columns: 1fr;
+  }
+  .img-box {
+    height: 160px;
+  }
 }
